// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Carousel basic 1`] = `
.c9 {
  display: inline-block;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 24px;
  height: 24px;
  fill: #666666;
  stroke: #666666;
}

.c9 g {
  fill: inherit;
  stroke: inherit;
}

.c9 *:not([stroke])[fill="none"] {
  stroke-width: 0;
}

.c9 *[stroke*="#"],
.c9 *[STROKE*="#"] {
  stroke: inherit;
  fill: none;
}

.c9 *[fill-rule],
.c9 *[FILL-RULE],
.c9 *[fill*="#"],
.c9 *[FILL*="#"] {
  fill: inherit;
  stroke: none;
}

.c13 {
  display: inline-block;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 24px;
  height: 24px;
  fill: #7D4CDB;
  stroke: #7D4CDB;
}

.c13 g {
  fill: inherit;
  stroke: inherit;
}

.c13 *:not([stroke])[fill="none"] {
  stroke-width: 0;
}

.c13 *[stroke*="#"],
.c13 *[STROKE*="#"] {
  stroke: inherit;
  fill: none;
}

.c13 *[fill-rule],
.c13 *[FILL-RULE],
.c13 *[fill*="#"],
.c13 *[FILL*="#"] {
  fill: inherit;
  stroke: none;
}

.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  overflow: hidden;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  opacity: 1;
  -webkit-animation: hftlBD 1s 0s forwards;
  animation: hftlBD 1s 0s forwards;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  width: 100%;
  height: 100%;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.c11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c8 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  font: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  color: inherit;
  outline: none;
  border: none;
  padding: 0;
  text-align: inherit;
  opacity: 0.3;
  cursor: default;
  height: 100%;
  line-height: 0;
}

.c8:focus {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c8:focus > circle,
.c8:focus > ellipse,
.c8:focus > line,
.c8:focus > path,
.c8:focus > polygon,
.c8:focus > polyline,
.c8:focus > rect {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c8:focus::-moz-focus-inner {
  border: 0;
}

.c12 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  font: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  color: inherit;
  outline: none;
  border: none;
  padding: 0;
  text-align: inherit;
  line-height: 0;
  padding: 12px;
}

.c12:focus {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c12:focus > circle,
.c12:focus > ellipse,
.c12:focus > line,
.c12:focus > path,
.c12:focus > polygon,
.c12:focus > polyline,
.c12:focus > rect {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c12:focus::-moz-focus-inner {
  border: 0;
}

.c14 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  font: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  color: inherit;
  outline: none;
  border: none;
  padding: 0;
  text-align: inherit;
  height: 100%;
  line-height: 0;
}

.c14:hover {
  background-color: rgba(221,221,221,0.4);
  color: #000000;
}

.c14:focus {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c14:focus > circle,
.c14:focus > ellipse,
.c14:focus > line,
.c14:focus > path,
.c14:focus > polygon,
.c14:focus > polyline,
.c14:focus > rect {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c14:focus::-moz-focus-inner {
  border: 0;
}

.c1 {
  position: relative;
}

.c2 {
  position: relative;
  display: block;
}

.c5 {
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
}

<div
  className="c0"
>
  <div
    className="c1"
    onKeyDown={[Function]}
  >
    <div
      className="c2"
    >
      <div
        className="c3"
      >
        <div
          className="c4"
        >
          <img
            className=""
            src="//v2.grommet.io/assets/IMG_4245.jpg"
          />
        </div>
      </div>
    </div>
    <div
      className="c5"
    >
      <div
        className="c3"
      >
        <div
          className="c6"
        >
          <img
            className=""
            src="//v2.grommet.io/assets/IMG_4210.jpg"
          />
        </div>
      </div>
    </div>
    <div
      className="c5"
    >
      <div
        className="c7"
        onBlur={[Function]}
        onFocus={[Function]}
        tabIndex="0"
      >
        <button
          className="c8"
          disabled={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
          type="button"
        >
          <svg
            aria-label="Previous"
            className="c9"
            viewBox="0 0 24 24"
          >
            <polyline
              fill="none"
              points="7 2 17 12 7 22"
              stroke="#000"
              strokeWidth="2"
              transform="matrix(-1 0 0 1 24 0)"
            />
          </svg>
        </button>
        <div
          className="c10"
        >
          <div
            className="c11"
          >
            <button
              className="c12"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseOut={[Function]}
              onMouseOver={[Function]}
              type="button"
            >
              <svg
                aria-label="Subtract"
                className="c13"
                viewBox="0 0 24 24"
              >
                <path
                  d="M2,12 L22,12"
                  fill="none"
                  stroke="#000"
                  strokeWidth="2"
                />
              </svg>
            </button>
            <button
              className="c12"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseOut={[Function]}
              onMouseOver={[Function]}
              type="button"
            >
              <svg
                aria-label="Subtract"
                className="c9"
                viewBox="0 0 24 24"
              >
                <path
                  d="M2,12 L22,12"
                  fill="none"
                  stroke="#000"
                  strokeWidth="2"
                />
              </svg>
            </button>
          </div>
        </div>
        <button
          className="c14"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
          type="button"
        >
          <svg
            aria-label="Next"
            className="c9"
            viewBox="0 0 24 24"
          >
            <polyline
              fill="none"
              points="7 2 17 12 7 22"
              stroke="#000"
              strokeWidth="2"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Carousel basic with \`initialChild: 1\` 1`] = `
.c9 {
  display: inline-block;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 24px;
  height: 24px;
  fill: #666666;
  stroke: #666666;
}

.c9 g {
  fill: inherit;
  stroke: inherit;
}

.c9 *:not([stroke])[fill="none"] {
  stroke-width: 0;
}

.c9 *[stroke*="#"],
.c9 *[STROKE*="#"] {
  stroke: inherit;
  fill: none;
}

.c9 *[fill-rule],
.c9 *[FILL-RULE],
.c9 *[fill*="#"],
.c9 *[FILL*="#"] {
  fill: inherit;
  stroke: none;
}

.c13 {
  display: inline-block;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 24px;
  height: 24px;
  fill: #7D4CDB;
  stroke: #7D4CDB;
}

.c13 g {
  fill: inherit;
  stroke: inherit;
}

.c13 *:not([stroke])[fill="none"] {
  stroke-width: 0;
}

.c13 *[stroke*="#"],
.c13 *[STROKE*="#"] {
  stroke: inherit;
  fill: none;
}

.c13 *[fill-rule],
.c13 *[FILL-RULE],
.c13 *[fill*="#"],
.c13 *[FILL*="#"] {
  fill: inherit;
  stroke: none;
}

.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  overflow: hidden;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  opacity: 1;
  -webkit-animation: hftlBD 1s 0s forwards;
  animation: hftlBD 1s 0s forwards;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  width: 100%;
  height: 100%;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.c11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c8 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  font: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  color: inherit;
  outline: none;
  border: none;
  padding: 0;
  text-align: inherit;
  height: 100%;
  line-height: 0;
}

.c8:hover {
  background-color: rgba(221,221,221,0.4);
  color: #000000;
}

.c8:focus {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c8:focus > circle,
.c8:focus > ellipse,
.c8:focus > line,
.c8:focus > path,
.c8:focus > polygon,
.c8:focus > polyline,
.c8:focus > rect {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c8:focus::-moz-focus-inner {
  border: 0;
}

.c12 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  font: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  color: inherit;
  outline: none;
  border: none;
  padding: 0;
  text-align: inherit;
  line-height: 0;
  padding: 12px;
}

.c12:focus {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c12:focus > circle,
.c12:focus > ellipse,
.c12:focus > line,
.c12:focus > path,
.c12:focus > polygon,
.c12:focus > polyline,
.c12:focus > rect {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c12:focus::-moz-focus-inner {
  border: 0;
}

.c14 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  font: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  color: inherit;
  outline: none;
  border: none;
  padding: 0;
  text-align: inherit;
  opacity: 0.3;
  cursor: default;
  height: 100%;
  line-height: 0;
}

.c14:focus {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c14:focus > circle,
.c14:focus > ellipse,
.c14:focus > line,
.c14:focus > path,
.c14:focus > polygon,
.c14:focus > polyline,
.c14:focus > rect {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c14:focus::-moz-focus-inner {
  border: 0;
}

.c1 {
  position: relative;
}

.c2 {
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
}

.c5 {
  position: relative;
  display: block;
}

<div
  className="c0"
>
  <div
    className="c1"
    onKeyDown={[Function]}
  >
    <div
      className="c2"
    >
      <div
        className="c3"
      >
        <div
          className="c4"
        >
          <img
            className=""
            src="//v2.grommet.io/assets/IMG_4245.jpg"
          />
        </div>
      </div>
    </div>
    <div
      className="c5"
    >
      <div
        className="c3"
      >
        <div
          className="c6"
        >
          <img
            className=""
            src="//v2.grommet.io/assets/IMG_4210.jpg"
          />
        </div>
      </div>
    </div>
    <div
      className="c2"
    >
      <div
        className="c7"
        onBlur={[Function]}
        onFocus={[Function]}
        tabIndex="0"
      >
        <button
          className="c8"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
          type="button"
        >
          <svg
            aria-label="Previous"
            className="c9"
            viewBox="0 0 24 24"
          >
            <polyline
              fill="none"
              points="7 2 17 12 7 22"
              stroke="#000"
              strokeWidth="2"
              transform="matrix(-1 0 0 1 24 0)"
            />
          </svg>
        </button>
        <div
          className="c10"
        >
          <div
            className="c11"
          >
            <button
              className="c12"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseOut={[Function]}
              onMouseOver={[Function]}
              type="button"
            >
              <svg
                aria-label="Subtract"
                className="c9"
                viewBox="0 0 24 24"
              >
                <path
                  d="M2,12 L22,12"
                  fill="none"
                  stroke="#000"
                  strokeWidth="2"
                />
              </svg>
            </button>
            <button
              className="c12"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseOut={[Function]}
              onMouseOver={[Function]}
              type="button"
            >
              <svg
                aria-label="Subtract"
                className="c13"
                viewBox="0 0 24 24"
              >
                <path
                  d="M2,12 L22,12"
                  fill="none"
                  stroke="#000"
                  strokeWidth="2"
                />
              </svg>
            </button>
          </div>
        </div>
        <button
          className="c14"
          disabled={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
          type="button"
        >
          <svg
            aria-label="Next"
            className="c9"
            viewBox="0 0 24 24"
          >
            <polyline
              fill="none"
              points="7 2 17 12 7 22"
              stroke="#000"
              strokeWidth="2"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Carousel navigate 1`] = `
.c9 {
  display: inline-block;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 24px;
  height: 24px;
  fill: #666666;
  stroke: #666666;
}

.c9 g {
  fill: inherit;
  stroke: inherit;
}

.c9 *:not([stroke])[fill="none"] {
  stroke-width: 0;
}

.c9 *[stroke*="#"],
.c9 *[STROKE*="#"] {
  stroke: inherit;
  fill: none;
}

.c9 *[fill-rule],
.c9 *[FILL-RULE],
.c9 *[fill*="#"],
.c9 *[FILL*="#"] {
  fill: inherit;
  stroke: none;
}

.c13 {
  display: inline-block;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 24px;
  height: 24px;
  fill: #7D4CDB;
  stroke: #7D4CDB;
}

.c13 g {
  fill: inherit;
  stroke: inherit;
}

.c13 *:not([stroke])[fill="none"] {
  stroke-width: 0;
}

.c13 *[stroke*="#"],
.c13 *[STROKE*="#"] {
  stroke: inherit;
  fill: none;
}

.c13 *[fill-rule],
.c13 *[FILL-RULE],
.c13 *[fill*="#"],
.c13 *[FILL*="#"] {
  fill: inherit;
  stroke: none;
}

.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  overflow: hidden;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  opacity: 1;
  -webkit-animation: hftlBD 1s 0s forwards;
  animation: hftlBD 1s 0s forwards;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  width: 100%;
  height: 100%;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.c11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c8 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  font: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  color: inherit;
  outline: none;
  border: none;
  padding: 0;
  text-align: inherit;
  opacity: 0.3;
  cursor: default;
  height: 100%;
  line-height: 0;
}

.c8:focus {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c8:focus > circle,
.c8:focus > ellipse,
.c8:focus > line,
.c8:focus > path,
.c8:focus > polygon,
.c8:focus > polyline,
.c8:focus > rect {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c8:focus::-moz-focus-inner {
  border: 0;
}

.c12 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  font: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  color: inherit;
  outline: none;
  border: none;
  padding: 0;
  text-align: inherit;
  line-height: 0;
  padding: 12px;
}

.c12:focus {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c12:focus > circle,
.c12:focus > ellipse,
.c12:focus > line,
.c12:focus > path,
.c12:focus > polygon,
.c12:focus > polyline,
.c12:focus > rect {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c12:focus::-moz-focus-inner {
  border: 0;
}

.c14 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  font: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  color: inherit;
  outline: none;
  border: none;
  padding: 0;
  text-align: inherit;
  height: 100%;
  line-height: 0;
}

.c14:hover {
  background-color: rgba(221,221,221,0.4);
  color: #000000;
}

.c14:focus {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c14:focus > circle,
.c14:focus > ellipse,
.c14:focus > line,
.c14:focus > path,
.c14:focus > polygon,
.c14:focus > polyline,
.c14:focus > rect {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c14:focus::-moz-focus-inner {
  border: 0;
}

.c1 {
  position: relative;
}

.c2 {
  position: relative;
  display: block;
}

.c5 {
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
}

<div
  class="c0"
>
  <div
    class="c1"
    data-testid="test-carousel"
  >
    <div
      class="c2"
    >
      <div
        class="c3"
      >
        <div
          class="c4"
        >
          <img
            class=""
            src="//v2.grommet.io/assets/IMG_4245.jpg"
          />
        </div>
      </div>
    </div>
    <div
      class="c5"
    >
      <div
        class="c3"
      >
        <div
          class="c6"
        >
          <img
            class=""
            src="//v2.grommet.io/assets/IMG_4210.jpg"
          />
        </div>
      </div>
    </div>
    <div
      class="c5"
    >
      <div
        class="c7"
        tabindex="0"
      >
        <button
          class="c8"
          disabled=""
          type="button"
        >
          <svg
            aria-label="Previous"
            class="c9"
            viewBox="0 0 24 24"
          >
            <polyline
              fill="none"
              points="7 2 17 12 7 22"
              stroke="#000"
              stroke-width="2"
              transform="matrix(-1 0 0 1 24 0)"
            />
          </svg>
        </button>
        <div
          class="c10"
        >
          <div
            class="c11"
          >
            <button
              class="c12"
              type="button"
            >
              <svg
                aria-label="Subtract"
                class="c13"
                viewBox="0 0 24 24"
              >
                <path
                  d="M2,12 L22,12"
                  fill="none"
                  stroke="#000"
                  stroke-width="2"
                />
              </svg>
            </button>
            <button
              class="c12"
              type="button"
            >
              <svg
                aria-label="Subtract"
                class="c9"
                viewBox="0 0 24 24"
              >
                <path
                  d="M2,12 L22,12"
                  fill="none"
                  stroke="#000"
                  stroke-width="2"
                />
              </svg>
            </button>
          </div>
        </div>
        <button
          class="c14"
          type="button"
        >
          <svg
            aria-label="Next"
            class="c9"
            viewBox="0 0 24 24"
          >
            <polyline
              fill="none"
              points="7 2 17 12 7 22"
              stroke="#000"
              stroke-width="2"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Carousel navigate 2`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 djOnwZ"
>
  <div
    class="StyledStack-ajspsk-0 fDjhAR"
    data-testid="test-carousel"
  >
    <div
      class="StyledStack__StyledStackLayer-ajspsk-1 gBThXn"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 ceQwbc"
      >
        <div
          class="StyledBox-sc-13pk1d4-0 csgqhr"
        >
          <img
            class="StyledImage-ey4zx9-0 paVDt"
            src="//v2.grommet.io/assets/IMG_4245.jpg"
          />
        </div>
      </div>
    </div>
    <div
      class="StyledStack__StyledStackLayer-ajspsk-1 jeVJjk"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 ceQwbc"
      >
        <div
          class="StyledBox-sc-13pk1d4-0 hggYQt"
        >
          <img
            class="StyledImage-ey4zx9-0 paVDt"
            src="//v2.grommet.io/assets/IMG_4210.jpg"
          />
        </div>
      </div>
    </div>
    <div
      class="StyledStack__StyledStackLayer-ajspsk-1 gBThXn"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 dwjKg"
        tabindex="0"
      >
        <button
          class="StyledButton-sc-323bzc-0 eRmxid"
          type="button"
        >
          <svg
            aria-label="Previous"
            class="StyledIcon-ofa7kd-0 dEeaTZ"
            viewBox="0 0 24 24"
          >
            <polyline
              fill="none"
              points="7 2 17 12 7 22"
              stroke="#000"
              stroke-width="2"
              transform="matrix(-1 0 0 1 24 0)"
            />
          </svg>
        </button>
        <div
          class="StyledBox-sc-13pk1d4-0 dTOLFJ"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 kalBJX"
          >
            <button
              class="StyledButton-sc-323bzc-0 hiyJPE"
              type="button"
            >
              <svg
                aria-label="Subtract"
                class="StyledIcon-ofa7kd-0 dEeaTZ"
                viewBox="0 0 24 24"
              >
                <path
                  d="M2,12 L22,12"
                  fill="none"
                  stroke="#000"
                  stroke-width="2"
                />
              </svg>
            </button>
            <button
              class="StyledButton-sc-323bzc-0 hiyJPE"
              type="button"
            >
              <svg
                aria-label="Subtract"
                class="StyledIcon-ofa7kd-0 fuviCN"
                viewBox="0 0 24 24"
              >
                <path
                  d="M2,12 L22,12"
                  fill="none"
                  stroke="#000"
                  stroke-width="2"
                />
              </svg>
            </button>
          </div>
        </div>
        <button
          class="StyledButton-sc-323bzc-0 gynwPT"
          disabled=""
          type="button"
        >
          <svg
            aria-label="Next"
            class="StyledIcon-ofa7kd-0 dEeaTZ"
            viewBox="0 0 24 24"
          >
            <polyline
              fill="none"
              points="7 2 17 12 7 22"
              stroke="#000"
              stroke-width="2"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Carousel navigate 3`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 djOnwZ"
>
  <div
    class="StyledStack-ajspsk-0 fDjhAR"
    data-testid="test-carousel"
  >
    <div
      class="StyledStack__StyledStackLayer-ajspsk-1 jeVJjk"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 ceQwbc"
      >
        <div
          class="StyledBox-sc-13pk1d4-0 gWwFrB"
        >
          <img
            class="StyledImage-ey4zx9-0 paVDt"
            src="//v2.grommet.io/assets/IMG_4245.jpg"
          />
        </div>
      </div>
    </div>
    <div
      class="StyledStack__StyledStackLayer-ajspsk-1 gBThXn"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 ceQwbc"
      >
        <div
          class="StyledBox-sc-13pk1d4-0 csgqhr"
        >
          <img
            class="StyledImage-ey4zx9-0 paVDt"
            src="//v2.grommet.io/assets/IMG_4210.jpg"
          />
        </div>
      </div>
    </div>
    <div
      class="StyledStack__StyledStackLayer-ajspsk-1 gBThXn"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 dwjKg"
        tabindex="0"
      >
        <button
          class="StyledButton-sc-323bzc-0 gynwPT"
          disabled=""
          type="button"
        >
          <svg
            aria-label="Previous"
            class="StyledIcon-ofa7kd-0 dEeaTZ"
            viewBox="0 0 24 24"
          >
            <polyline
              fill="none"
              points="7 2 17 12 7 22"
              stroke="#000"
              stroke-width="2"
              transform="matrix(-1 0 0 1 24 0)"
            />
          </svg>
        </button>
        <div
          class="StyledBox-sc-13pk1d4-0 dTOLFJ"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 kalBJX"
          >
            <button
              class="StyledButton-sc-323bzc-0 hiyJPE"
              type="button"
            >
              <svg
                aria-label="Subtract"
                class="StyledIcon-ofa7kd-0 fuviCN"
                viewBox="0 0 24 24"
              >
                <path
                  d="M2,12 L22,12"
                  fill="none"
                  stroke="#000"
                  stroke-width="2"
                />
              </svg>
            </button>
            <button
              class="StyledButton-sc-323bzc-0 hiyJPE"
              type="button"
            >
              <svg
                aria-label="Subtract"
                class="StyledIcon-ofa7kd-0 dEeaTZ"
                viewBox="0 0 24 24"
              >
                <path
                  d="M2,12 L22,12"
                  fill="none"
                  stroke="#000"
                  stroke-width="2"
                />
              </svg>
            </button>
          </div>
        </div>
        <button
          class="StyledButton-sc-323bzc-0 eRmxid"
          type="button"
        >
          <svg
            aria-label="Next"
            class="StyledIcon-ofa7kd-0 dEeaTZ"
            viewBox="0 0 24 24"
          >
            <polyline
              fill="none"
              points="7 2 17 12 7 22"
              stroke="#000"
              stroke-width="2"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Carousel play 1`] = `
.c9 {
  display: inline-block;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 24px;
  height: 24px;
  fill: #666666;
  stroke: #666666;
}

.c9 g {
  fill: inherit;
  stroke: inherit;
}

.c9 *:not([stroke])[fill="none"] {
  stroke-width: 0;
}

.c9 *[stroke*="#"],
.c9 *[STROKE*="#"] {
  stroke: inherit;
  fill: none;
}

.c9 *[fill-rule],
.c9 *[FILL-RULE],
.c9 *[fill*="#"],
.c9 *[FILL*="#"] {
  fill: inherit;
  stroke: none;
}

.c13 {
  display: inline-block;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 24px;
  height: 24px;
  fill: #7D4CDB;
  stroke: #7D4CDB;
}

.c13 g {
  fill: inherit;
  stroke: inherit;
}

.c13 *:not([stroke])[fill="none"] {
  stroke-width: 0;
}

.c13 *[stroke*="#"],
.c13 *[STROKE*="#"] {
  stroke: inherit;
  fill: none;
}

.c13 *[fill-rule],
.c13 *[FILL-RULE],
.c13 *[fill*="#"],
.c13 *[FILL*="#"] {
  fill: inherit;
  stroke: none;
}

.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  overflow: hidden;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  opacity: 1;
  -webkit-animation: hftlBD 1s 0s forwards;
  animation: hftlBD 1s 0s forwards;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  width: 100%;
  height: 100%;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.c11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c8 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  font: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  color: inherit;
  outline: none;
  border: none;
  padding: 0;
  text-align: inherit;
  opacity: 0.3;
  cursor: default;
  height: 100%;
  line-height: 0;
}

.c8:focus {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c8:focus > circle,
.c8:focus > ellipse,
.c8:focus > line,
.c8:focus > path,
.c8:focus > polygon,
.c8:focus > polyline,
.c8:focus > rect {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c8:focus::-moz-focus-inner {
  border: 0;
}

.c12 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  font: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  color: inherit;
  outline: none;
  border: none;
  padding: 0;
  text-align: inherit;
  line-height: 0;
  padding: 12px;
}

.c12:focus {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c12:focus > circle,
.c12:focus > ellipse,
.c12:focus > line,
.c12:focus > path,
.c12:focus > polygon,
.c12:focus > polyline,
.c12:focus > rect {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c12:focus::-moz-focus-inner {
  border: 0;
}

.c14 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  font: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  color: inherit;
  outline: none;
  border: none;
  padding: 0;
  text-align: inherit;
  height: 100%;
  line-height: 0;
}

.c14:hover {
  background-color: rgba(221,221,221,0.4);
  color: #000000;
}

.c14:focus {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c14:focus > circle,
.c14:focus > ellipse,
.c14:focus > line,
.c14:focus > path,
.c14:focus > polygon,
.c14:focus > polyline,
.c14:focus > rect {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c14:focus::-moz-focus-inner {
  border: 0;
}

.c1 {
  position: relative;
}

.c2 {
  position: relative;
  display: block;
}

.c5 {
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <div
      class="c2"
    >
      <div
        class="c3"
      >
        <div
          class="c4"
        >
          <img
            class=""
            src="//v2.grommet.io/assets/IMG_4245.jpg"
          />
        </div>
      </div>
    </div>
    <div
      class="c5"
    >
      <div
        class="c3"
      >
        <div
          class="c6"
        >
          <img
            class=""
            src="//v2.grommet.io/assets/IMG_4210.jpg"
          />
        </div>
      </div>
    </div>
    <div
      class="c5"
    >
      <div
        class="c7"
        tabindex="0"
      >
        <button
          class="c8"
          disabled=""
          type="button"
        >
          <svg
            aria-label="Previous"
            class="c9"
            viewBox="0 0 24 24"
          >
            <polyline
              fill="none"
              points="7 2 17 12 7 22"
              stroke="#000"
              stroke-width="2"
              transform="matrix(-1 0 0 1 24 0)"
            />
          </svg>
        </button>
        <div
          class="c10"
        >
          <div
            class="c11"
          >
            <button
              class="c12"
              type="button"
            >
              <svg
                aria-label="Subtract"
                class="c13"
                viewBox="0 0 24 24"
              >
                <path
                  d="M2,12 L22,12"
                  fill="none"
                  stroke="#000"
                  stroke-width="2"
                />
              </svg>
            </button>
            <button
              class="c12"
              type="button"
            >
              <svg
                aria-label="Subtract"
                class="c9"
                viewBox="0 0 24 24"
              >
                <path
                  d="M2,12 L22,12"
                  fill="none"
                  stroke="#000"
                  stroke-width="2"
                />
              </svg>
            </button>
          </div>
        </div>
        <button
          class="c14"
          type="button"
        >
          <svg
            aria-label="Next"
            class="c9"
            viewBox="0 0 24 24"
          >
            <polyline
              fill="none"
              points="7 2 17 12 7 22"
              stroke="#000"
              stroke-width="2"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Carousel play 2`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 djOnwZ"
>
  <div
    class="StyledStack-ajspsk-0 fDjhAR"
  >
    <div
      class="StyledStack__StyledStackLayer-ajspsk-1 gBThXn"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 ceQwbc"
      >
        <div
          class="StyledBox-sc-13pk1d4-0 csgqhr"
        >
          <img
            class="StyledImage-ey4zx9-0 paVDt"
            src="//v2.grommet.io/assets/IMG_4245.jpg"
          />
        </div>
      </div>
    </div>
    <div
      class="StyledStack__StyledStackLayer-ajspsk-1 jeVJjk"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 ceQwbc"
      >
        <div
          class="StyledBox-sc-13pk1d4-0 hggYQt"
        >
          <img
            class="StyledImage-ey4zx9-0 paVDt"
            src="//v2.grommet.io/assets/IMG_4210.jpg"
          />
        </div>
      </div>
    </div>
    <div
      class="StyledStack__StyledStackLayer-ajspsk-1 gBThXn"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 dwjKg"
        tabindex="0"
      >
        <button
          class="StyledButton-sc-323bzc-0 eRmxid"
          type="button"
        >
          <svg
            aria-label="Previous"
            class="StyledIcon-ofa7kd-0 dEeaTZ"
            viewBox="0 0 24 24"
          >
            <polyline
              fill="none"
              points="7 2 17 12 7 22"
              stroke="#000"
              stroke-width="2"
              transform="matrix(-1 0 0 1 24 0)"
            />
          </svg>
        </button>
        <div
          class="StyledBox-sc-13pk1d4-0 dTOLFJ"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 kalBJX"
          >
            <button
              class="StyledButton-sc-323bzc-0 hiyJPE"
              type="button"
            >
              <svg
                aria-label="Subtract"
                class="StyledIcon-ofa7kd-0 dEeaTZ"
                viewBox="0 0 24 24"
              >
                <path
                  d="M2,12 L22,12"
                  fill="none"
                  stroke="#000"
                  stroke-width="2"
                />
              </svg>
            </button>
            <button
              class="StyledButton-sc-323bzc-0 hiyJPE"
              type="button"
            >
              <svg
                aria-label="Subtract"
                class="StyledIcon-ofa7kd-0 fuviCN"
                viewBox="0 0 24 24"
              >
                <path
                  d="M2,12 L22,12"
                  fill="none"
                  stroke="#000"
                  stroke-width="2"
                />
              </svg>
            </button>
          </div>
        </div>
        <button
          class="StyledButton-sc-323bzc-0 gynwPT"
          disabled=""
          type="button"
        >
          <svg
            aria-label="Next"
            class="StyledIcon-ofa7kd-0 dEeaTZ"
            viewBox="0 0 24 24"
          >
            <polyline
              fill="none"
              points="7 2 17 12 7 22"
              stroke="#000"
              stroke-width="2"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Carousel should trigger events of focus, blur and click 1`] = `
.c11 {
  display: inline-block;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 24px;
  height: 24px;
  fill: #7D4CDB;
  stroke: #7D4CDB;
}

.c11 g {
  fill: inherit;
  stroke: inherit;
}

.c11 *:not([stroke])[fill="none"] {
  stroke-width: 0;
}

.c11 *[stroke*="#"],
.c11 *[STROKE*="#"] {
  stroke: inherit;
  fill: none;
}

.c11 *[fill-rule],
.c11 *[FILL-RULE],
.c11 *[fill*="#"],
.c11 *[FILL*="#"] {
  fill: inherit;
  stroke: none;
}

.c13 {
  display: inline-block;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 24px;
  height: 24px;
  fill: #666666;
  stroke: #666666;
}

.c13 g {
  fill: inherit;
  stroke: inherit;
}

.c13 *:not([stroke])[fill="none"] {
  stroke-width: 0;
}

.c13 *[stroke*="#"],
.c13 *[STROKE*="#"] {
  stroke: inherit;
  fill: none;
}

.c13 *[fill-rule],
.c13 *[FILL-RULE],
.c13 *[fill*="#"],
.c13 *[FILL*="#"] {
  fill: inherit;
  stroke: none;
}

.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  overflow: hidden;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  opacity: 1;
  -webkit-animation: hftlBD 1s 0s forwards;
  animation: hftlBD 1s 0s forwards;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  width: 100%;
  height: 100%;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-transform: translateX(-200%);
  -ms-transform: translateX(-200%);
  transform: translateX(-200%);
  -webkit-animation: cowwqN 1s 0s forwards;
  animation: cowwqN 1s 0s forwards;
}

.c12 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  font: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  color: inherit;
  outline: none;
  border: none;
  padding: 0;
  text-align: inherit;
  line-height: 0;
  padding: 12px;
}

.c12:focus {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c12:focus > circle,
.c12:focus > ellipse,
.c12:focus > line,
.c12:focus > path,
.c12:focus > polygon,
.c12:focus > polyline,
.c12:focus > rect {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c12:focus::-moz-focus-inner {
  border: 0;
}

.c10 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  font: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  color: inherit;
  outline: none;
  border: none;
  padding: 0;
  text-align: inherit;
  line-height: 0;
  padding: 12px;
}

.c10:focus {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c10:focus > circle,
.c10:focus > ellipse,
.c10:focus > line,
.c10:focus > path,
.c10:focus > polygon,
.c10:focus > polyline,
.c10:focus > rect {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c10:focus::-moz-focus-inner {
  border: 0;
}

.c1 {
  position: relative;
}

.c2 {
  position: relative;
  display: block;
}

.c5 {
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
}

<div
  class="c0"
>
  <div
    class="c1"
    id="test-carousel"
  >
    <div
      class="c2"
    >
      <div
        class="c3"
      >
        <div
          class="c4"
        >
          <img
            class=""
            src="//v2.grommet.io/assets/IMG_4245.jpg"
          />
        </div>
      </div>
    </div>
    <div
      class="c5"
    >
      <div
        class="c3"
      >
        <div
          class="c6"
        >
          <img
            class=""
            src="//v2.grommet.io/assets/IMG_4210.jpg"
          />
        </div>
      </div>
    </div>
    <div
      class="c5"
    >
      <div
        class="c7"
        tabindex="0"
      >
        <div
          class="c8"
        >
          <div
            class="c9"
          >
            <button
              class="c10"
              type="button"
            >
              <svg
                aria-label="Subtract"
                class="c11"
                viewBox="0 0 24 24"
              >
                <path
                  d="M2,12 L22,12"
                  fill="none"
                  stroke="#000"
                  stroke-width="2"
                />
              </svg>
            </button>
            <button
              class="c12"
              type="button"
            >
              <svg
                aria-label="Subtract"
                class="c13"
                viewBox="0 0 24 24"
              >
                <path
                  d="M2,12 L22,12"
                  fill="none"
                  stroke="#000"
                  stroke-width="2"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
